Load resources using class loader